// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ActionHeader with Previous-Next button when onNext is givien 1`] = `
<ActionHeader
  onBack={null}
  onClose={null}
  onMaximize={null}
  onMinimize={null}
  onNext={[Function]}
  onPrevious={null}
  title=""
/>
`;

exports[`should render ActionHeader with Previous-Next button when onPrevious is givien 1`] = `
<ActionHeader
  onBack={null}
  onClose={null}
  onMaximize={null}
  onMinimize={null}
  onNext={null}
  onPrevious={[Function]}
  title=""
/>
`;

exports[`should render ActionHeader with back button 1`] = `
<ActionHeader
  onBack={[Function]}
  onClose={null}
  onMaximize={null}
  onMinimize={null}
  onNext={null}
  onPrevious={null}
  title=""
/>
`;

exports[`should render ActionHeader with children 1`] = `
<ActionHeader
  onBack={null}
  onClose={null}
  onMaximize={null}
  onMinimize={null}
  onNext={null}
  onPrevious={null}
  title=""
>
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isReversed={false}
    type="button"
    variant="default"
  />
</ActionHeader>
`;

exports[`should render ActionHeader with close button 1`] = `
<ActionHeader
  onBack={null}
  onClose={[Function]}
  onMaximize={null}
  onMinimize={null}
  onNext={null}
  onPrevious={null}
  title=""
/>
`;

exports[`should render ActionHeader with expand button 1`] = `
<ActionHeader
  onBack={null}
  onClose={null}
  onMaximize={[Function]}
  onMinimize={null}
  onNext={null}
  onPrevious={null}
  title=""
/>
`;

exports[`should render ActionHeader with minimize button 1`] = `
<ActionHeader
  onBack={null}
  onClose={null}
  onMaximize={null}
  onMinimize={[Function]}
  onNext={null}
  onPrevious={null}
  title=""
/>
`;

exports[`should render ActionHeader with title 1`] = `
<ActionHeader
  onBack={null}
  onClose={null}
  onMaximize={null}
  onMinimize={null}
  onNext={null}
  onPrevious={null}
  title="Title"
/>
`;

exports[`should render default component 1`] = `
<ActionHeader
  onBack={null}
  onClose={null}
  onMaximize={null}
  onMinimize={null}
  onNext={null}
  onPrevious={null}
  title=""
/>
`;
